# serial_func

./: CMakeLists.txt  README.md  serial_func.kdev4
include/serial/: serial.h
src/: CMakeLists.txt
src/crc/: CMakeLists.txt  crc.cpp
src/main/: CMakeLists.txt  main.cpp
src/serial/: CMakeLists.txt  serial.cpp
